[tool.poetry]
name = "hw05-web"
version = "0.1.0"
description = "Консольна утиліта, яка повертає курс EUR та USD ПриватБанку протягом останніх кількох днів."
authors = ["Dishalex <dishalex@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hw05_web"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
